feat: Implement API key validation for Gemini and TMDb operations with user guidance to settings, and add macOS build instructions.